# aptos-nft-indexer

./: .gitignore  Cargo.toml  config.yaml  rustfmt.toml
.github/workflows/: release.yml  rust.yml
migrations/2023-01-31-033832_collections/: up.sql
migrations/2023-02-01-083456_tokens/: up.sql
migrations/2023-02-04-020021_lists/: up.sql
migrations/2023-02-04-024859_coins/: up.sql
migrations/2023-02-04-024905_orders/: up.sql
migrations/2023-02-04-025330_bids/: up.sql
migrations/2023-02-09-084901_domain/: up.sql
migrations/2023-02-09-090409_activitie/: up.sql
src/: aptos_schema.rs  aws.rs  config.rs  db.rs  lib.rs  main.rs  schema.rs  service.rs  worker.rs
src/models/: current_collection_datas.rs  current_token_datas.rs  current_token_ownerships.rs  domain.rs  market_collections.rs  mod.rs  table_items.rs  tokens.rs
src/service/: aptos_collections_indexer.rs  aptos_indexer.rs  aptos_nfts_indexer.rs  mod.rs
