[package]
name = "cargos-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
config = "0.13.1"
aws-config = "0.53.0"
aws-sdk-s3 = "0.23.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
async-trait = "0.1.63"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
field_count = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
